tests/paczka1/fuzzy1/31814014.err
Error in line 8: eDsE A414 82,8
Error in line 9: eDsE A88 32,7
Error in line 3: 50sBZq A414 19,7
Error in line 14: 50sBZq S556 48,0
Error in line 26: tBbkdV A414 152,71
Error in line 30: 7Z4EGr A88 81,0
Error in line 34: tBbkdV A414 97,5
Error in line 36: tBbkdV S556 33,4
